fix: Add mob-menu class to ul and gave it flex-direction: row; so on mobile verion it displays menu horizontally to match desktop version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,15 @@ header {
 
 /*Nav - background color code taken from (https://hexcolorspicker.com/tools/materialui/uigradients/uigradients/index.html#ViceCity) and edited slightly*/
 
+ .mob-menu {
+    display: flex;
+    flex-direction: row;
+} 
+
+.navbar-toggler {
+    font-size: 1rem;
+ }
+
 nav {
     background: #000046; 
     background: -webkit-linear-gradient(to right, #01013f, #3494E6); 
@@ -22,19 +31,19 @@ nav {
 }
 
 nav a .logo {
-    font-size: 20px;
+    font-size: 12px;
     background-position: center;
 }
 
 .pages {
-    height: 40px;
-    width: 80px;
+    height: 30px;
+    width: 70px;
     text-align: center;
     padding: 0;
 }
 
 .pages .active {
-    height: 40px;
+    height: 30px;
     width: 100%;
     text-decoration: none;
     background-color: rgba(238, 196, 10, 0.9);
@@ -42,7 +51,6 @@ nav a .logo {
     font-family: "Risque", sans-serif;
     font-weight: 500;
     font-size: 12px;
-    padding-top: 12px;
 }
 
 /*nav-left & nav-right taken from stackoverflow (https://stackoverflow.com/questions/26078771/rounded-corners-for-navbar)*/
@@ -55,6 +63,8 @@ nav a .logo {
     border-top-right-radius:30px;
     border-bottom-right-radius:30px;
 }
+
+
 
 /*------------Hero image for home & sign up pages*/
 
@@ -73,6 +83,7 @@ div.hero-image {
 
 article {
     padding-top: 5em;
+    padding-bottom: 5em;
 }
 
 .welcome-part {
@@ -129,15 +140,12 @@ hr {
     margin: 0.5em;
 }
 
-#todo {
-    margin-left: 1em;
-}
-
 #todo,
 #tosee,
 #todosee,
 #doseenear {
-    padding-top: 3.5em;
+    padding-top: 2.2em;
+    margin-left: 1em;
 }
 
 
@@ -145,7 +153,7 @@ hr {
 
  img {
     border-radius: 30px;
-    width: 330px;
+    width: 300px;
     height: 300px;
     background-repeat: no-repeat;
     margin: 0.5em;
@@ -183,9 +191,9 @@ footer {
     text-decoration: none;
     color: #fff;
     font-family: inherit;
-    font-weight: 500;
-    font-size: 15px;
-    margin-top: 0.3em;
+    font-weight: 700;
+    font-size: 12px;
+    margin: 2em;
 }
 
 .socials {
@@ -205,6 +213,18 @@ footer {
 }
 
 @media only screen and (min-width: 768px) {
+
+    .pages {
+        height: 70px;
+        width: 100px;
+    }
+    .pages .active {
+        height: 70px;
+        width: 100px;
+        font-size: 21px;
+        padding-top: 20px;
+    }
+
     .text-center{
     margin: 1em 2em 2em 2em;
 }
@@ -239,6 +259,14 @@ footer {
        margin-right: 0;
        margin-left: 0; 
     }
+
+    #todo,
+    #tosee,
+    #todosee,
+    #doseenear {
+      padding-top: 3.5em;
+}
+
     img {
         width: 300px;
     }
